--- a/htmlJS.html
+++ b/htmlJS.html
@@ -42,8 +42,7 @@
     function saludar(){
         var nombre = document.getElementById("nombre").value
         var descripcion = document.getElementById("descripcion").value
-        alert("Hola " + nombre + " como estas")
-// Este es un coment
+        alert("Hola " + nombre)
     }
 
     function cambiarColor(color){   
