--- a/operadoresLogicos (1).html
+++ b/operadoresLogicos (1).html
@@ -56,7 +56,7 @@
 
    /** Ingresando una nota y un numero asistencias, determinar si
     * un estudiante aprueba, teniendo en cuenta que se aprueba con
-    * una nota superior o igual a 3 Y minimo 60 asistencias
+    * una nota superior o igual a 3 Y minimo 60 asistenas
    */
 
    var nota = parseFloat(prompt("Ingrese la nota:"))
