--- a/bbs_taller 4-1.html
+++ b/bbs_taller 4-1.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>BBS INGENIERÍA SAS</title>
 	<style>
-		/*comentario de prueba*/
+		/*comentario de prueba adicional*/
 	body {
 	font-family: Arial, sans-serif;
 	margin: 0;
