--- a/ciclosFor.html
+++ b/ciclosFor.html
@@ -16,20 +16,20 @@
     // }
     // /** Cronometro */
     // for(var i=10; i>0; i--){
-    //     document.write("Tick Tack " + i + "<br>")
-    // }
-    // document.write("Boom")
+      //   document.write("Tick Tack " + i + "<br>")
+     //}
+     //document.write("Boom")
 
     /**
      * Hacer un algoritmo que calcule el factorial de un numero
     */
-//    var num = parseInt(prompt("Ingrese el numero: ")) // 5
-//    var factorial=1;
-//    for(var i=num; i>0; i--){
-//     //                factorial*i
-//     factorial= factorial*i // 1*5 => 5*4 => 20*3 => 60*2 => 120*1 = 120
-//    }
-//    document.write("El factorial de " + num + " es " + factorial)
+   // var num = parseInt(prompt("Ingrese el numero: ")) // 5
+   // var factorial=1;
+   // for(var i=num; i>0; i--){
+     //                factorial*i
+     //factorial= factorial*i // 1*5 => 5*4 => 20*3 => 60*2 => 120*1 = 120
+    //}
+    //document.write("El factorial de " + num + " es " + factorial)
 
    /**
     * Implementar un algoritmo que reciba un numero, e imprima la tabla
