--- a/arrays.html
+++ b/arrays.html
@@ -111,16 +111,16 @@
 /**
  * Algortimo que imprima los elementos de un array, cada uno en una linea independiente
 */
-var equipos = ["Millonarios", "Santa fé", "Nacional", "America"]
-for(var i=0; i<equipos.length; i++){
+//var equipos = ["Millonarios", "Santa fé", "Nacional", "America"]
+/*for(var i=0; i<equipos.length; i++){
     document.write(equipos[i] + "<br>")
 }
 
 /**
  * Sumar todos los elementos de un array
 */
-var ventas = [115, 224, 1500, 800, 3241]
-var total=0
+//var ventas = [115, 224, 1500, 800, 3241]
+/*var total=0
 for(var i=0; i<ventas.length; i++){
     total+=ventas[i]
 }
@@ -129,8 +129,8 @@ document.write("El total de ventas fue: " + total)
 /**
  * Encontrar el valor maximo de un array
 */
-var notas = [3.1, 3.3 , 4, 1.2]
-var notaMaxima=notas[0] // 3.1
+//var notas = [3.1, 3.3 , 4, 1.2]
+/*var notaMaxima=notas[0] // 3.1
 for(var i=0; i<notas.length; i++){
     if(notas[i] > notaMaxima){ // 1.2 > 4
         notaMaxima = notas[i] // 4
@@ -142,8 +142,8 @@ document.write("La nota maxima es: " + notaMaxima + "<br>")
 /**
  * Teniendo un array de numeros, imprimir solamente los que sean mutiplos de 4
 */
-var numeros = [2, 3, 16, 24, 36, 48, 62, 80, 100]
-for(var i=0; i<numeros.length; i++){
+//var numeros = [2, 3, 16, 24, 36, 48, 62, 80, 100]
+/*for(var i=0; i<numeros.length; i++){
     if(numeros[i]%4 == 0){ // Operador modulo => Residuo
         document.write("El numero " + numeros[i] + " es multiplo de 4 <br>")
     }
