--- a/funciones.html
+++ b/funciones.html
@@ -11,16 +11,19 @@
 <script>
     // Definiendo la funcion
     // parametro
-    function saludar(nombre, apellido){
+    /*function saludar(nombre, apellido){
         document.write("Hola" + " " + nombre + " " + apellido + "<br>")
     }
+
+    saludar()
 
     function despedirse(){
         document.write("Adios <br>")
     }
+    despedirse()
 
-    /**
-     * Implementar una calculadora usando funciones
+    //
+     *Implementar una calculadora usando funciones
     */
 
     // Definicion de la funcion
@@ -41,34 +44,34 @@
    }
 
    // LLamado de la funcion
-//    var n1 = parseInt(prompt("Ingrese el numero 1:"))
-//    var n2 = parseInt(prompt("Ingrese el numero 2:"))
-//    var operacion = prompt("Ingrese la operacion")
-//    var resultado = 0
+     var n1 = parseInt(prompt("Ingrese el numero 1:"))
+     var n2 = parseInt(prompt("Ingrese el numero 2:"))
+     var operacion = prompt("Ingrese la operacion")
+    var resultado = 0
 
-//    switch(operacion){
-//     case "Suma":
-//         resultado = suma(n1, n2)
-//         break;
-//     case "Resta":
-//         resultado = resta(n1, n2)
-//         break;
-//     case "Multiplicacion":
-//         resultado = multiplicacion(n1, n2)
-//         break;
-//     case "Division":
-//         resultado = division(n1, n2)
-//         break;
-//    }
+    switch(operacion){
+     case "Suma":
+         resultado = suma(n1, n2)
+            break;
+        case "Resta":
+                resultado = resta(n1, n2)
+            break;
+         case "Multiplicacion":
+             resultado = multiplicacion(n1, n2)
+             break;
+         case "Division":
+             resultado = division(n1, n2)
+             break;
+    }
 
-//    document.write("El resultado de la " + operacion + " es: " + resultado)
+    document.write("El resultado de la " + operacion + " es: " + resultado)
 
    /**
     * Crear una funcion que reciba un numero y me diga
     * a cual mes pertenece
    */
 
-  function validarMes(numero){
+ /* function validarMes(numero){
     var mes=""
     switch(numero){
         case 1:
@@ -104,7 +107,7 @@
   /**
    * Crear una funcion que reciba 4 numeros y retorne el promedio
   */
-function promedio(num1, num2, num3, num4){ //4,12,6,8
+/*function promedio(num1, num2, num3, num4){ //4,12,6,8
     return (num1+num2+num3+num4)/4 // 7.5
 }
 
@@ -114,7 +117,7 @@ document.write("El promedio es: " + resultado)
  /**
   * Crear una funcion que reciba un numero y retorne su factorial
  */
-function factorial(num){ // 7
+/*function factorial(num){ // 7
     var calculo=1;
     for(var i=num; i>0; i--){
         calculo= calculo*i // 1*7 = 7*6 = 42*5 = 210*4 = 840*3 = 2520*2 = 5040*1
@@ -128,7 +131,7 @@ document.write("El factorial es: " + calculoFactorial)
 /**
  * Crear una funcion que reciba una edad y retorne si es apto para votar
 */
-function aptoVotar(edad){
+/*function aptoVotar(edad){
     if(edad >= 18){
         return "Si"
     }else{
@@ -142,7 +145,7 @@ document.write("Es apto para votar? " + validarEdad)
 /**
  * Crear una funcion que reciba un array de numeros y retorne el numero mas alto
 */
-function numeroMayor(array){ //100,75,40,5,86,212
+/*function numeroMayor(array){ //100,75,40,5,86,212
     var mayor=array[0] // 100
     for(var i=0; i<= array.length; i++){
         if(array[i] > mayor){ // 212 > 100
