--- a/bbs - Taller 2.html
+++ b/bbs - Taller 2.html
@@ -59,7 +59,7 @@
 		</div>
 	<div class="container">
 	<div class="logo">
-	<img   class="imagen1" src="https://scontent.fnva1-1.fna.fbcdn.net/v/t39.30808-6/438300475_785868016975935_7677834054448856311_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Oj5JkUrF-zAQ7kNvgH28Ulp&_nc_ht=scontent.fnva1-1.fna&oh=00_AYATXs9GuAYnOXzKucSjskwQ1ZTZ_DIt6w5quFRHH2gYLQ&oe=665C5AD1" alt="BBS Logo">
+	<img   class="imagen1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHeRCRAySFS71VXkOIK20nTiXBSq4AmM_PDawxZEod&s" alt="BBS Logo">
 	</div>
 	<p>Empresa dedicada a prestar servicios profesionales de asesoría en Ingeniería Civil</p>
 	<h2 class="titulo">SERVICIOS</h2>
