--- a/bbs - Taller 4.html
+++ b/bbs - Taller 4.html
@@ -59,7 +59,7 @@
 		</div>
 	<div class="container">
 	<div class="logo">
-	<img class="imagen1" src="https://scontent.fnva1-1.fna.fbcdn.net/v/t39.30808-6/438300475_785868016975935_7677834054448856311_n.jpg?_nc_cat=103&ccb=1-7&_nc_sid=5f2048&_nc_ohc=Oj5JkUrF-zAQ7kNvgH28Ulp&_nc_ht=scontent.fnva1-1.fna&oh=00_AYATXs9GuAYnOXzKucSjskwQ1ZTZ_DIt6w5quFRHH2gYLQ&oe=665C5AD1" alt="BBS Logo">
+	<img class="imagen1" src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSHeRCRAySFS71VXkOIK20nTiXBSq4AmM_PDawxZEod&s" alt="BBS Logo">
 	<select onchange="cambiarTamanoLogo(value)">
     <option value="small">Pequeño</option>
     <option value="medium">Mediano</option>
@@ -334,10 +334,16 @@ table#estilo-tabla {
     function enviarFormulario(){
         var nombre = document.getElementById("nombre").value
         var apellidos = document.getElementById("apellidos").value
+        var documento = document.getElementById("Documento_de_identidad").value
+        var ciudad = document.getElementById("ciudad").value
+        var telefono = document.getElementById("tel").value
+        var email = document.getElementById("email").value
+        var anexos = document.getElementById("file").value
+        var fecha_nacimiennto = document.getElementById("fecha_nacimiento").value
         // Agregar los campos que faltan
 
-        if(nombre && apellidos){
-            alert("Los datos del formulario son: " + nombre + " " + apellidos)
+        if(nombre && apellidos && documento && ciudad && telefono && email && anexos && fecha_nacimiento){
+            alert("Los datos del formulario son: " + nombre + " " + apellidos " " + documento + " " + ciudad + " " + telefono + " " + email + " "  + anexos + " "  + fecha_nacimiennto + " ")
         }
     }
     function cambiarTamañoLogo(tamano) {
